--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>PSI &mdash; FYI</title>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/moment.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.min.js"></script>
     <script src="js/jquery.rss.js"></script>
     <script>
       jQuery(function($) {
