--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>PSI &mdash; FYI</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.min.js"></script>
-    <script src="js/jquery.rss.js"></script>
+    <script src="jquery.rss.min.js"></script>
     <script>
       jQuery(function($) {
         $("#rss-feeds").rss("https://psi.id/feed/")
