--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="jquery.rss.min.js"></script>
     <script>
       jQuery(function($) {
-        $("#rss-feeds").rss("https://feeds.feedburner.com/partai-psi")
+        $("#rss-feeds").rss("https://feeds.feedburner.com/partai-psi?format=xml")
       })
     </script>
   </head>
