--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/locale/id.js"></script>
-    <script src="jquery.rss.min.js"></script>
+    <script src="yrss.min.js"></script>
     <script>
       jQuery(function($) {
-        $("#rss-feeds").rss("https://feeds.feedburner.com/partai-psi?format=xml")
+        $("#rss-feeds").yrss("https://feeds.feedburner.com/partai-psi?format=xml")
       })
     </script>
   </head>
