--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       jQuery(function($) {
         // $("#rss-feeds").rss("https://feeds.feedburner.com/partai-psi?format=xml")
         $("#rss-feeds").rss("https://psi.id/feed/", {
+          limit: 30,
           ssl: true
         })
       })
