--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
           limit: 30,
           ssl: true,
           dateFormat: 'dd MMMM YYYY',
-          dateLocale: 'id',
-          effect: 'slideFastSynced'
+          dateLocale: 'id'
         })
       })
     </script>
