--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         $("#rss-feeds").rss("https://psi.id/feed/", {
           limit: 30,
           ssl: true,
-          dateFormat: 'dd MMMM YYYY',
+          dateFormat: 'do MMMM YYYY',
           dateLocale: 'id'
         })
       })
