--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="canonical" href="https://psi.fyi/" />
     <link rel='shortlink' href='https://psi.fyi/' />
     
+    <style>
+      .logo {
+        background: transparent url('logo.png') no-repeat fixed center;
+      }
+    </style>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/locale/id.js"></script>
@@ -27,6 +32,7 @@
     </script>
   </head>
   <body>
+    <div class="logo"></div>
     <div id="rss-feeds"></div>
   </body>
 </html>
