--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     
     <style>
       .logo {
-        background: transparent url('logo.png') no-repeat fixed center;
+        width: 200 px;
+        height: 104 px;
+        background: transparent url('logo-small.png') no-repeat fixed center;
       }
     </style>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
