--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </script>
   </head>
   <body>
-    <div class="logo"></div>
+    <div class="logo"><img src="logo-small.png" alt="logo-small" /></div>
     <div id="rss-feeds"></div>
   </body>
 </html>
