--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   </head>
   <body>
     <div class="logo"><img src="logo-small.png" alt="logo-small" /></div>
+    <h3>DPD PSI Garut</h3>
     <div id="rss-feeds"></div>
   </body>
 </html>
