--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="canonical" href="https://psi.fyi/" />
     <link rel='shortlink' href='https://psi.fyi/' />
     
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <style>
+      body {
+        font-family: 'Raleway', sans-serif;
+      }
       .logo {
         width: 200px;
         height: 104px;
