--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel='shortlink' href='https://psi.fyi/' />
     
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <style>
       body {
         font-family: 'Raleway', sans-serif;
+      }
+      h2 {
+        font-family: 'Nunito', sans-serif;
       }
       .logo {
         width: 200px;
@@ -39,7 +43,7 @@
   </head>
   <body>
     <div class="logo"><img src="logo-small.png" alt="logo-small" /></div>
-    <h3>DPD PSI Garut</h3>
+    <h2>DPD PSI Garut</h2>
     <div id="rss-feeds"></div>
   </body>
 </html>
