--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="canonical" href="https://psi.fyi/" />
     <link rel='shortlink' href='https://psi.fyi/' />
     
+    <link rel="icon" type="image/svg+xml" href="logo.svg">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <style>
