--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           ssl: true,
           // layoutTemplate: "<div class='feed-container'>{entries}</div>",
           // entryTemplate: '<p>{title}</p>',
-          dateFormat: 'do MMMM YYYY',
+          dateFormat: 'dddd, D MMMM YYYY',
           dateLocale: 'id'
         })
       })
