--- a/index.html
+++ b/index.html
@@ -32,6 +32,36 @@
         background: transparent url('logo-small.png') no-repeat fixed center;
       }
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org", 
+        "@type": "TechArticle",
+        "headline": "Extra! Extra! Read alla bout it",
+        "dependencies": "You must be at least a level 2 PRO to make this happen",
+        "proficiencyLevel": "Expert",
+        "alternativeHeadline": "This article is also about robots and stuff",
+        "image": "http://example.com/image.jpg",
+        "author": "Patrick Coombe", 
+        "award": "Best article ever written",
+        "editor": "Craig Mount", 
+        "genre": "search engine optimization", 
+        "keywords": "seo sales b2b", 
+        "wordcount": "1120",
+        "publisher": "Book Publisher Inc",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://pub.psi.fyi/logo-tag.png",
+          "width": "673",
+          "height": "920"
+        },
+        "url": "http://www.example.com",
+        "datePublished": "2015-09-20",
+        "dateCreated": "2015-09-20",
+        "dateModified": "2015-09-20",
+        "description": "We love to do stuff to help people and stuff",
+        "articleBody": "You can paste your entire post in here, and yes it can get really really long."
+      }
+    </script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/locale/id.js"></script>
