--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         "genre": "search engine optimization", 
         "keywords": "seo sales b2b", 
         "wordcount": "1120",
-        "publisher": "Book Publisher Inc",
+        "publisher": {"@type":"Organization", "name":"Book Publisher Inc",
         "logo": {
           "@type": "ImageObject",
           "url": "https://pub.psi.fyi/logo-tag.png",
           "width": "673",
           "height": "920"
-        },
+        }},
         "url": "http://www.example.com",
         "datePublished": "2015-09-20",
         "dateCreated": "2015-09-20",
