--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     
     <link rel='dns-prefetch' href='//ajax.googleapis.com' />
     <link rel='dns-prefetch' href='//cdnjs.cloudflare.com' />
-    <link rel="canonical" href="https://psi.fyi/" />
-    <link rel='shortlink' href='https://psi.fyi/' />
+    <link rel="canonical" href="https://pub.psi.fyi/" />
+    <link rel='shortlink' href='https://pub.psi.fyi/' />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
