--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         "dependencies": "You must be at least a level 2 PRO to make this happen",
         "proficiencyLevel": "Expert",
         "alternativeHeadline": "This article is also about robots and stuff",
-        "image": "http://example.com/image.jpg",
+        "image": "https://pub.psi.fyi/logo.png",
         "author": "Patrick Coombe", 
         "award": "Best article ever written",
         "editor": "Craig Mount", 
@@ -87,7 +87,7 @@
           "width": "673",
           "height": "920"
         }},
-        "url": "http://www.example.com",
+        "url": "https://pub.psi.fyi",
         "datePublished": "2015-09-20",
         "dateCreated": "2015-09-20",
         "dateModified": "2015-09-20",
